--- a/src/style.scss
+++ b/src/style.scss
@@ -1,4 +1,63 @@
+html,
+body {
+  padding: 0;
+  margin: 0;
+}
+
 body {
   background-color: #efefef;
   font-family: "Lato", sans-serif;
+}
+
+/* Header */
+.header-wrap {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #ffffffa9;
+  padding: 16px 80px;
+
+  img {
+    width: 45px;
+  }
+
+  ul {
+    margin: 0;
+    padding: 0;
+
+    li {
+      list-style: none;
+
+      a {
+        text-transform: uppercase;
+        text-decoration: none;
+        color: #ffffff;
+        font-weight: 700;
+        background-color: #1646e6;
+        border-radius: 4px;
+        padding: 9px 36px 12px;
+
+        &:hover {
+          background-color: #0d33b3;
+        }
+      }
+    }
+  }
+}
+
+/* Main Container */
+.main-container {
+  margin: 80px 180px;
+}
+
+/* Footer */
+.footer-wrap {
+  background-color: #ffffffa9;
+  padding: 10px 0;
+
+  p {
+    color: #202020;
+    text-align: center;
+    font-size: 16px;
+  }
 }
